# Ecell_Task2

./: .gitignore  README.md  app.py  evaluation_results.json  pyproject.toml  requirements.txt
data/processed/: chunks.json
models/: model_config.json
src/: evaluate.py  features.py  preprocess.py  train.py  utils.py
