[project]
name = "ecell-task-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=2.2.2",
    "tqdm>=4.68.2",
    "uvicorn>=0.49.0",
]
